--- a/css/styles.css
+++ b/css/styles.css
@@ -129,9 +129,9 @@ h1,
     -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue",
     Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
     "Noto Color Emoji";
-  font-weight: 500;
+  font-weight: 900;
 
-  color: #141415;
+  color: #3d3d3d;
 }
 
 h1,
@@ -191,8 +191,9 @@ h6,
 p {
   margin-top: 0;
   margin-bottom: 1rem;
-  color: white;
+  color: #3d3d3d;
   font-size: 18px;
+  font-weight: 900;
 }
 
 abbr[title],
@@ -11802,6 +11803,18 @@ section.resume-section {
 section.resume-section .resume-section-content {
   width: 100%;
 }
+section.title {
+  display: flex;
+  align-items: center;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  max-width: 75rem;
+}
+section.title .resume-section-content {
+  width: 100%;
+}
 
 @media (min-width: 768px) {
   section.resume-section {
@@ -11817,17 +11830,66 @@ section.resume-section .resume-section-content {
   }
 }
 .logo {
+  width: 60px;
+  height: auto;
+  size: 10px;
+}
+.logoT {
   width: 80px;
   height: auto;
   size: 10px;
 }
+@media screen and (max-width: 1000px) {
+  .logoT {
+    display: none;
+  }
+}
+.logoTF {
+  width: 100px;
+  height: auto;
+  size: 10px;
+  margin-left: auto;
+  margin-right: auto;
+}
+@media screen and (min-width: 1000px) {
+  .logoT {
+    display: none;
+  }
+}
+.logoIDS {
+  width: 25px;
+  height: auto;
+  size: 10px;
+  filter: invert(99%) sepia(99%) saturate(2%) hue-rotate(88deg) brightness(105%)
+    contrast(100%);
+}
+.logoIDSF {
+  width: 50px;
+  height: auto;
+  size: 10px;
+  filter: invert(99%) sepia(99%) saturate(2%) hue-rotate(88deg) brightness(105%)
+    contrast(100%);
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 20%;
+}
+@media screen and (min-width: 1000px) {
+  .logoIDSF {
+    display: none;
+  }
+}
+@media screen and (max-width: 1000px) {
+  .logoIDS {
+    display: none;
+  }
+}
 .displaypic {
-  width: 50%;
+  width: 30%;
   height: auto;
   margin-left: auto;
   margin-right: auto;
   margin-top: 10%;
-  border-radius: 100px;
+  border-radius: 200px;
   display: block;
 }
 @media screen and (min-width: 1000px) {
@@ -11837,32 +11899,57 @@ section.resume-section .resume-section-content {
 }
 .pillSection {
   margin-bottom: 10%;
-  border-radius: 50px;
-  background-color: #f0f0f0;
-  box-shadow: 10px 10px 5px gray;
+  border-style: solid;
+  border-color: #3d3d3d;
+  border-width: 2px;
+  background-color: inherit;
+
   align-items: center;
 }
 .pill {
-  border-radius: 50px;
-  background-color: lightblue;
-  box-shadow: 5px 5px 5px gray;
+  background-color: inherit;
+  border-style: solid;
+  border-color: #3d3d3d;
+  border-width: 2px;
+
   width: fit-content;
   height: auto;
   padding: 2%;
-  padding-left: 3%;
-  padding-right: 3%;
+  padding-left: 2%;
+  padding-right: 2%;
   margin-left: 2%;
   align-items: center;
 }
 .pill:hover {
   transform: scale(1.1);
   transition: ease-in-out 200ms;
-  box-shadow: 10px 10px 15px gray;
 }
 @media screen and (max-width: 800px) {
   .pill {
     padding: 5%;
     padding-left: 8%;
     padding-right: 8%;
+  }
+}
+h3 {
+  font-size: 2rem;
+}
+p {
+  font-size: 1.5rem;
+}
+.footer {
+  background-color: #888888;
+  display: block;
+  align-items: center;
+  padding: 10%;
+  padding-left: 50%;
+  padding-right: 50%;
+  width: 100%;
+  align-content: center;
+  justify-content: center;
+}
+@media screen and (min-width: 1000px) {
+  .footer {
+    display: none;
   }
 }
