--- a/css/styles.css
+++ b/css/styles.css
@@ -11891,6 +11891,27 @@ section.resume-section .resume-section-content {
     display: none;
   }
 }
+.titlediv {
+  margin: 10%;
+}
+.mobileT {
+  margin-left: auto;
+  margin-right: auto;
+
+  font-size: 1.1rem;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif, Arial,
+    Helvetica, sans-serif;
+}
+@media screen and (min-width: 1000px) {
+  .titlediv {
+    display: none;
+  }
+}
+hr {
+  background-color: lightgray;
+  padding: 0%;
+}
 .pillSection {
   margin-left: auto;
   margin-right: auto;
@@ -11951,6 +11972,11 @@ h1 {
   padding-left: 2%;
   margin-top: auto;
   margin-bottom: auto;
+}
+h6 {
+  font-size: 0.6rem;
+  color: white;
+  font-weight: 100;
 }
 @media screen and (max-width: 800px) {
   h3 {
