--- a/css/styles.css
+++ b/css/styles.css
@@ -4385,6 +4385,7 @@ fieldset:disabled .btn {
   flex-basis: 100%;
   flex-grow: 1;
   align-items: center;
+  height: 100vh;
 }
 
 .navbar-toggler {
@@ -11825,7 +11826,7 @@ section.resume-section .resume-section-content {
 
 @media (min-width: 768px) {
   section.resume-section {
-    min-height: 100vh;
+    min-height: 80vh;
   }
 }
 @media (min-width: 992px) {
@@ -11921,6 +11922,7 @@ hr {
   background-color: white;
   width: 95%;
   padding-bottom: 5%;
+  height: 80%;
 
   align-items: center;
 }
@@ -11930,7 +11932,6 @@ hr {
   width: 400px;
   height: auto;
   display: inline;
-
   padding: 5%;
   padding-top: 1%;
   border-style: solid;
@@ -11947,7 +11948,7 @@ hr {
     padding-left: 3%;
     padding-right: 8%;
     width: 300px;
-    height: 100px;
+    height: fit-content;
   }
 }
 h3 {
@@ -11991,13 +11992,14 @@ h6 {
 .banner {
   display: flex;
   width: 100%;
-  height: 100px;
+  height: 88px;
   background-color: white;
   margin-top: 0%;
   margin-bottom: 3%;
   margin-right: 0%;
   position: fixed;
   top: 0%;
+  position: sticky;
 
   padding-left: 2%;
 }
@@ -12013,7 +12015,7 @@ h6 {
   }
 }
 .lowban {
-  margin-top: 0%;
+  margin-top: 40%;
   position: absolute;
   bottom: 0;
   margin-left: 35%;
