--- a/css/styles.css
+++ b/css/styles.css
@@ -11930,6 +11930,7 @@ hr {
   background-color: #067bb40d;
   border-radius: 8px;
   width: 400px;
+
   height: auto;
   display: inline;
   padding: 5%;
@@ -11949,6 +11950,7 @@ hr {
     padding-right: 8%;
     width: 300px;
     height: fit-content;
+    /* max-width: fit-content; */
   }
 }
 h3 {
@@ -11976,7 +11978,7 @@ h1 {
   margin-bottom: auto;
 }
 h6 {
-  font-size: 0.6rem;
+  font-size: 0.8rem;
   color: white;
   font-weight: 100;
 }
@@ -12007,6 +12009,7 @@ h6 {
   width: 100%;
   height: 100px;
   background-color: #004a6d;
+  margin-bottom: 7vh;
 }
 @media screen and (max-width: 1000px) {
   .navbanner,
@@ -12015,8 +12018,19 @@ h6 {
   }
 }
 .lowban {
+  width: 100%;
   margin-top: 40%;
   position: absolute;
   bottom: 0;
-  margin-left: 35%;
+  text-align: center;
+}
+@media screen and (max-width: 1000px) {
+  .lowban {
+    bottom: 10vh;
+  }
+}
+@media screen and (max-width: 500px) {
+  .lowban {
+    bottom: 5vh;
+  }
 }
